name:                standups-cli
version:             0.0.1
synopsis:            Manage daily standup logging from the terminal
description:         Please see README.md
homepage:            http://github.com/mmwtsn/standups-cli#readme
license:             BSD3
license-file:        LICENSE
author:              M. Maxwell Watson
maintainer:          hi@mmwtsn.com
copyright:           M. Maxwell Watson
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson
                     , aeson-pretty
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , time
  other-modules:       Data
                     , FileSystem
                     , Prompt
                     , ReadWrite
  default-language:    Haskell2010

executable standup
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , standups-cli
  default-language:    Haskell2010

test-suite standups-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , standups-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmwtsn/standups-cli
